[gd_scene load_steps=2 format=3 uid="uid://bqxvn8ywqxqxq"]

[ext_resource type="Script" path="res://scripts/ui/CharacterCustomization.gd" id="1_0x8yw"]

[node name="CharacterCustomization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8yw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="PlayerPreview" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="Label" type="Label" parent="MainContainer/PlayerPreview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.0
offset_right = 50.0
offset_bottom = 12.0
text = "Player Preview"
horizontal_alignment = 1

[node name="CustomizationTabs" type="TabContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="AppearancePanel" type="ScrollContainer" parent="MainContainer/CustomizationTabs"]
layout_mode = 2
metadata/_tab_name = "Appearance"

[node name="AppearanceContainer" type="VBoxContainer" parent="MainContainer/CustomizationTabs/AppearancePanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SkinColorLabel" type="Label" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2
text = "Skin Color"

[node name="SkinColorSlider" type="HSlider" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2

[node name="HairStyleLabel" type="Label" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2
text = "Hair Style"

[node name="HairStyleSlider" type="HSlider" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2

[node name="HairColorLabel" type="Label" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2
text = "Hair Color"

[node name="HairColorSlider" type="HSlider" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2

[node name="JerseyColorLabel" type="Label" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2
text = "Jersey Color"

[node name="JerseyColorSlider" type="HSlider" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2

[node name="ShortsColorLabel" type="Label" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2
text = "Shorts Color"

[node name="ShortsColorSlider" type="HSlider" parent="MainContainer/CustomizationTabs/AppearancePanel/AppearanceContainer"]
layout_mode = 2

[node name="EquipmentPanel" type="HSplitContainer" parent="MainContainer/CustomizationTabs"]
layout_mode = 2
metadata/_tab_name = "Equipment"

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer/CustomizationTabs/EquipmentPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AvailableLabel" type="Label" parent="MainContainer/CustomizationTabs/EquipmentPanel/LeftPanel"]
layout_mode = 2
text = "Available Equipment"

[node name="EquipmentList" type="ItemList" parent="MainContainer/CustomizationTabs/EquipmentPanel/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MainContainer/CustomizationTabs/EquipmentPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquippedLabel" type="Label" parent="MainContainer/CustomizationTabs/EquipmentPanel/RightPanel"]
layout_mode = 2
text = "Currently Equipped"

[node name="EquippedItems" type="VBoxContainer" parent="MainContainer/CustomizationTabs/EquipmentPanel/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemDetailsLabel" type="Label" parent="MainContainer/CustomizationTabs/EquipmentPanel/RightPanel"]
layout_mode = 2
text = "Item Details"

[node name="ItemDetails" type="RichTextLabel" parent="MainContainer/CustomizationTabs/EquipmentPanel/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select an item to view details"

[node name="StatsPanel" type="VBoxContainer" parent="MainContainer/CustomizationTabs"]
layout_mode = 2
metadata/_tab_name = "Stats"

[node name="CurrencyLabel" type="Label" parent="MainContainer/CustomizationTabs/StatsPanel"]
layout_mode = 2
text = "Coins: 0"

[node name="StatsLabel" type="Label" parent="MainContainer/CustomizationTabs/StatsPanel"]
layout_mode = 2
text = "Current Stats"

[node name="StatsContainer" type="VBoxContainer" parent="MainContainer/CustomizationTabs/StatsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_left = 20.0
offset_right = -20.0

[node name="DoneButton" type="Button" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 8
text = "Done"